--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,12 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "rich>=14.1.0",
     "numpy>=2.3.2",
-    "scipy>=1.7.0",
     "fire>=0.7.0",
     "pedalboard>=0.9.0",
     "toml>=0.10.2",
     "loguru>=0.7.0",
+    "python-slugify[unidecode]>=8.0.4",
+    "pathvalidate>=3.3.1",
 ]
 
 [project.urls]
@@ -119,7 +120,7 @@ strict_equality = true
 [[tool.mypy.overrides]]
 module = [
     "elevenlabs.*",
-    "scipy.*",
     "numpy.*",
+    "pedalboard.*",
 ]
 ignore_missing_imports = true
